--- a/Mission06_Biggs/appsettings.json
+++ b/Mission06_Biggs/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "dbConnection": "Data Source = MovieDB.sqlite"
+        "dbConnection": "Data Source = JoelHiltonMovieCollection.sqlite"
     }
 }
